--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/Vih6460/MBA_API_SOLID_NodeJs#readme",
   "devDependencies": {
-    "@types/node": "^22.13.4",
-    "tsup": "^8.3.6",
-    "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "@types/node": "22.13.4",
+    "tsup": "8.3.6",
+    "tsx": "4.19.3",
+    "typescript": "5.7.3"
   },
   "dependencies": {
-    "fastify": "^5.2.1"
+    "fastify": "5.2.1"
   }
 }
