--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Vih6460/MBA_API_SOLID_NodeJs#readme",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.4",
     "prisma": "6.4.1",
     "tsup": "8.3.6",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.4.1",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
     "zod": "3.24.2"
