--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.4",
+    "@vitest/coverage-v8": "3.0.6",
     "prisma": "6.4.1",
     "tsup": "8.3.6",
     "tsx": "4.19.3",
