--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.4",
     "@vitest/coverage-v8": "3.0.6",
+    "@vitest/ui": "3.0.6",
     "prisma": "6.4.1",
     "tsup": "8.3.6",
     "tsx": "4.19.3",
