--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NODE_ENV=dev
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+# Auth
+JWT_SECRET=djcbdhjbecjekeckj
