--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -33,10 +34,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.4",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.0.6",
     "@vitest/ui": "3.0.6",
     "npm-run-all": "4.1.5",
     "prisma": "6.4.1",
+    "supertest": "7.1.0",
     "tsup": "8.3.6",
     "tsx": "4.19.3",
     "typescript": "5.7.3",
