--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vitest": "3.0.6"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.4.1",
     "bcryptjs": "3.0.2",
