--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 18
           cache: 'npm'
 
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-      - run: npm run test
+      - name: Run tests
+        run: NODE_OPTIONS=--experimental-vm-modules npm run test
